--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-
-  <div class="background">
-    <!-- <h1 class="main-title">Keragaman Hayati</h1> -->
-    <img src="./assets/img/ciletuh-2 (2).png" class="front-layer img-fluid" alt="..." />
-    <img src="./assets/img/ciletuh-2 (3).png" class="mid-layer img-fluid" alt="..." />
-    <img src="./assets/img/ciletuh-2 (4).png" class="back-layer img-fluid" alt="..." />
-  </div>
-
-  <!-- buat script -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-  <body></body>
+  <body>
+    <section id="landing-page">
+      <div class="background">
+        <img src="./assets/img/ciletuh-2 (2).png" class="front" alt="" />
+        <img src="./assets/img/ciletuh-2 (3).png" class="mid" alt="" />
+        <img src="./assets/img/ciletuh-2 (4).png" class="back" alt="" />
+      </div>
+      <div class="landing-content">
+        <div class="main-title">
+          <h1 class="title">Keragaman Hayati</h1>
+          <h2 class="sub-title">Geopark Ciletuh Pelabuhan Ratu</div>
+        </div>
+        <div class="mulai-perjalanan">Mulai Perjalanan Anda</div>
+        <!-- <p class="mulai-perjalanan"></p> -->
+        <!-- button ke bawah -->
+      </div>
+    </section>
+  </body>
 </html>
