--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/img/tupai-cropped.svg" class="d-block w-100" alt="...">
+            <img src="./assets/img/cute-squirrel-forest 1.svg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
