--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <section id="landing-animation">
+      <div id="landingAnimationBg" class="background-landing-animation"></div>
+      <div class="sliderAnimation position-absolute top-50 start-50 translate-middle"></div>
+      <div class="micky-team fw-bold position-absolute top-50 start-50 translate-middle">Micky's Travel</div>
+    </section>
+    </div>
     <section id="landing-page">
       <div class="background">
-        <img src="./assets/img/ciletuh-2 (2).png" class="front" alt="" />
-        <img src="./assets/img/ciletuh-2 (3).png" class="mid" alt="" />
-        <img src="./assets/img/ciletuh-2 (4).png" class="back" alt="" />
+        <img src="./assets/img/ciletuh-2 (2).png" class="landing front" data-value="3" alt="" />
+        <img src="./assets/img/ciletuh-2 (3).png" class="landing mid" data-value="2" alt="" />
+        <img src="./assets/img/ciletuh-2 (4).png" class="landing back" data-value="1" alt="" />
       </div>
+
       <div class="landing-content">
         <div class="main-title">
           <h1 class="title">Keragaman Hayati</h1>
@@ -26,11 +33,36 @@
       </div>
     </section>
     <section id="slider">
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+            buat quote
+          </div>
+          <div class="row">
+            <div class="col">
+              Fauna Flora Langka
+            </div>
+            <div class="col">
+              Arena Konservasi
+            </div>
+            <div class="col">
+              Area Budidaya
+            </div>
+            <div class="col">
+              Biota Laut
+            </div>
+          </div>
+          <div class="row">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque maxime vero aliquid, excepturi suscipit, explicabo delectus molestias eos ad rerum dolores dolorum? Odit unde quas debitis at quis voluptatibus quaerat!
+          </div>
+          <div class="row">Learn More</div>
+        </div>
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -54,6 +86,13 @@
               <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="./assets/img/kuya-cropped.svg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -67,5 +106,10 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/EasePack.min.js"></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
