--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/img/tupai-cropped.svg" class="d-block w-100" alt="...">
+            <img src="./assets/img of ciletuh/cute-squirrel-forest.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
@@ -104,7 +104,18 @@
         </button>
       </div>
     </section>
-
+    <section id="flora-fauna">
+      <!-- mangga ngoding sini ngab -->
+    </section>
+    <section id="area-konservasi">
+      <!-- mangga ngoding sini ngab -->
+    </section>
+    <section id="area-budidaya">
+      <!-- mangga ngoding sini ngab -->
+    </section>
+    <section id="biota-laut">
+      <!-- mangga ngoding sini ngab -->
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
