--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#"><i class="uil uil-home"></i> Home</a>
           <a href="#"><i class="uil uil-compass"></i> Explore</a>
           <a href="#"><i class="uil uil-info-circle"></i> About</a>
-          <a href="#"><i class="uil uil-document-layout-left"></i> Blog</a>
+          <a href="#"><i clas s="uil uil-document-layout-left"></i> Blog</a>
           <a href="#"><i class="uil uil-envelope"></i> Contact</a>
         </div>
       </div>
@@ -37,7 +37,7 @@
     <div class="swiper bg-slider">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="./assets/img/bg1.jpg" alt="">
+          <img src="./assets/img/bg1.webp" alt="">
           <div class="text-content">
             <h2 class="title">Flora Fauna Langka</h2>
             <p>As an environmentalist, it is appropriate to maintain rare flora and fauna</p>
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="swiper-slide dark-layer">
-          <img src="./assets/img/bg2.jpg" alt="">
+          <img src="./assets/img/bg2.webp" alt="">
           <div class="text-content">
             <h2 class="title">Area Konservasi</h2>
             <p>Caring for biodiversity is an effort to love to care for the earth</p>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="swiper-slide dark-layer">
-          <img src="./assets/img/bg3.jpg" alt="">
+          <img src="./assets/img/bg3.webp" alt="">
           <div class="text-content">
             <h2 class="title">Biota Laut</h2>
             <p>Save the earth by cultivating it just like saving our lives</p>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="./assets/img/bg4.jpg" alt="">
+          <img src="./assets/img/bg4.webp" alt="">
           <div class="text-content">
             <h2 class="title">Area Budidaya</h2>
             <p>Great attention gets paid to marine area cause the diversity of ocean is amazing</p>
@@ -73,10 +73,10 @@
     
     <div class="bg-slider-thumbs">
       <div class="swiper-wrapper thumbs-container">
-        <img src="./assets/img/bg1.jpg" class="swiper-slide" alt="">
-        <img src="./assets/img/bg2.jpg" class="swiper-slide" alt="">
-        <img src="./assets/img/bg3.jpg" class="swiper-slide" alt="">
-        <img src="./assets/img/bg4.jpg" class="swiper-slide" alt="">
+        <img src="./assets/img/bg1.webp" class="swiper-slide" alt="">
+        <img src="./assets/img/bg2.webp" class="swiper-slide" alt="">
+        <img src="./assets/img/bg3.webp" class="swiper-slide" alt="">
+        <img src="./assets/img/bg4.webp" class="swiper-slide" alt="">
       </div>
     </div>
   </section>
@@ -86,7 +86,7 @@
         <h2 data-jarallax-element="0 -200">Keanekaragaman Hayati Geopark<br> Ciletuh Palabuhanratu</h2>
         <div class="container">
             <div class="imgBx">
-                <img src="./assets/img/Curug Cimarinjung.jpg" class="jarallax-img">
+                <img src="./assets/img/Curug Cimarinjung.webp" class="jarallax-img">
             </div>
             <div class="content" data-jarallax-element="-200 0">
                 <p>Keanekaragaman hayati adalah istilah yang diberikan untuk berbagai kehidupan di bumi. Kehidupan tersebut meliputi semua spesies tanaman, hewan dan mikroorganisme serta ekosistem dimana mereka hidup dan berinteraksi. Keragaman hayati dapat dieksplorasi berdasarkan pada 3 tingkatan: Keragaman Genetik, keragaman Spesies, dan Keragaman  Ekosistem.</p>
@@ -99,7 +99,7 @@
         <h2 data-jarallax-element="0 200">Keanekaragaman Hayati Geopark<br>Ciletuh Palabuhanratu</h2>
         <div class="container">
             <div class="imgBx">
-                <img src="./assets/img/sungai.jpg" class="jarallax-img">
+                <img src="./assets/img/sungai.webp" class="jarallax-img">
             </div>
             <div class="content" data-jarallax-element="-200 0">
                 <p>Keragaman genetik mengacu pada berbagai gen dalam suatu spesies. Setiap spesies terdiri dari individu-individu yang memiliki komposisi genetik tersendiri.</p>
@@ -112,7 +112,7 @@
         <h2 data-jarallax-element="0 -200">Keanekaragaman Hayati Geopark<br> Ciletuh Palabuhanratu</h2>
         <div class="container">
             <div class="imgBx">
-                <img src="./assets/img/rusa.jpg" class="jarallax-img">
+                <img src="./assets/img/rusa.webp" class="jarallax-img">
             </div>
             <div class="content" data-jarallax-element="-200 0">
                 <p>Dalam suatu spesies bisa juga terdapat populasi diskrit dengan gen yang khas. Gen mengandung informasi yang diperlukan untuk semua kehidupan di bumi. Mereka diturunkan dari orang tua kepada keturunannya.</p>
@@ -132,10 +132,10 @@
 <section>
   <div class="body3">
     <div class="container3">
-      <h2>BIOTA LAUT</h2>
+      <h2>FLORA FAUNA LANGKA</h2>
       <div class="card3">
           <div class="imgBx">
-              <img src="./assets/img/bg ff1.jpg">
+              <img src="./assets/img/bg ff1.webp">
           </div>
           <div class="content3">
           <div class="content3">
@@ -150,7 +150,7 @@
     <div class="container_2">
         <div class="row">
         <div class="image">
-            <img src="./assets/img/flora fauna (1).jpg" alt="">
+            <img src="./assets/img/flora fauna (1).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Brotok <span>Eagle</span></a>
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="./assets/img/flora fauna (2).jpg" alt="">
+            <img src="./assets/img/flora fauna (2).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Green <span>Turtle</span></a>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="./assets/img/flora fauna (3).jpg" alt="">
+            <img src="./assets/img/flora fauna (3).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Long Tailed <span>Monkeys</span></a>
@@ -176,7 +176,7 @@
         </div>
         <div class="row">
         <div class="image">
-            <img src="./assets/img/flora fauna (4).jpg" alt="">
+            <img src="./assets/img/flora fauna (4).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Raflesia <span>Padma</span></a>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="./assets/img/flora fauna (5).jpg" alt="">
+            <img src="./assets/img/flora fauna (5).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Black <span>Bamboo</span></a>
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="./assets/img/flora fauna (6).jpg" alt="">
+            <img src="./assets/img/flora fauna (6).webp" alt="">
             <div class="details">
             <div class="more">
                 <a class="read-more">Various <span>Orchid</span></a>
@@ -209,7 +209,7 @@
     <h2 class="main-title2">Area Konservasi</h2>
     <div class="content2">
       <div class="image2">
-        <img src="./assets/img/bg konservasi.jpg" alt="">
+        <img src="./assets/img/bg konservasi.webp" alt="">
       </div>
       <div class="text-box2">
         <p>Area konservasi merupakan upaya menyelamatkan kehidupan di bumi dalam segala bentuk dan menjaga eksositem supaya berfungsi secara alami dan sehat. Keberadaan kawasan konservasi dalam sebuah geopark adalah hal yang paling utama. Geopark Ciletuh Palabuhanratu memiliki kawasan konservasi untuk perlindungan hayati dalam ekosistim yang alami berupa hutan primer dan hutan sekunder yaitu: Cagar Alam Cibanteng, Tangkubanparahu, Sukawayana, Suaka Margasatwa Cikepuh, dan Taman Wisata Alam Sukawayana yang dikelola Balai Konservasi Sumber Daya Alam (BKSDA) dan Konservasi Penyu Hijau dikelola Dinas Perikanan dan Kelautan, Provinsi Jawa Barat.</p>
@@ -221,25 +221,25 @@
 <section>
     <div class="img-slider">
         <div class="slide active">
-          <img src="./assets/img/konservasi (1).jpg" alt="">
+          <img src="./assets/img/konservasi (1).webp" alt="">
           <div class="info">
             <h2>Suaka Margasatwa Cikepuh</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="./assets/img/konservasi (2).jpg" alt="">
+          <img src="./assets/img/konservasi (2).webp" alt="">
           <div class="info">
             <h2>Hutan Konservasi Cipeucang</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="./assets/img/konservasi (3).jpg" alt="">
+          <img src="./assets/img/konservasi (3).webp" alt="">
           <div class="info">
             <h2>Area Konservasi Penyu</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="./assets/img/konservasi (4).jpg" alt="">
+          <img src="./assets/img/konservasi (4).webp" alt="">
           <div class="info">
             <h2>Hutan Konservasi Mangrove</h2>
           </div>
@@ -315,7 +315,7 @@
       <h2>BIOTA LAUT</h2>
       <div class="card3">
           <div class="imgBx">
-              <img src="./assets/img/bg biota1.jpg">
+              <img src="./assets/img/bg biota1.webp">
           </div>
           <div class="content3">
             <p>Kawasan laut di geopark Ciletuh-Palabuhanratu  sangat kaya akan biota lautnya, seperti berbagai macam terumbu karang, ikan, udang dan lobster, termasuk jenis ikan lumba-lumba. Kehadiran rombongan lumba-lumba menjadi atraksi wisata yang menarik di geopark. Dimana sekelompok lumba-lumba terlihat bermain di sekitar Teluk Ciletuh atau di Teluk Palabuhanratu.</p> 
@@ -328,7 +328,7 @@
   <div class="container_2">
       <div class="row">
       <div class="image">
-          <img src="./assets/img/biota laut (1).jpg" alt="">
+          <img src="./assets/img/biota laut (1).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more">Headtail  <span>Fish</span></a>
@@ -336,7 +336,7 @@
           </div>
       </div>
       <div class="image">
-          <img src="./assets/img/biota laut (2).jpg" alt="">
+          <img src="./assets/img/biota laut (2).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more">Tuna <span>Fish</span></a>
@@ -344,7 +344,7 @@
           </div>
       </div>
       <div class="image">
-          <img src="./assets/img/biota laut (3).jpg" alt="">
+          <img src="./assets/img/biota laut (3).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more">Different Type <span>of Dolphins</span></a>
@@ -354,7 +354,7 @@
       </div>
       <div class="row">
       <div class="image">
-          <img src="./assets/img/biota laut (4).jpg" alt="">
+          <img src="./assets/img/biota laut (4).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more"><span>Lobsters</span></a>
@@ -362,7 +362,7 @@
           </div>
       </div>
       <div class="image">
-          <img src="./assets/img/biota laut (5).jpg" alt="">
+          <img src="./assets/img/biota laut (5).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more"> <span>Shrimp</span></a>
@@ -370,7 +370,7 @@
           </div>
       </div>
       <div class="image">
-          <img src="./assets/img/biota laut (6).jpg" alt="">
+          <img src="./assets/img/biota laut (6).webp" alt="">
           <div class="details">
           <div class="more">
               <a class="read-more"> <span>Squid</span></a>
@@ -387,7 +387,7 @@
     <h2 class="main-title2">Area Budidaya</h2>
     <div class="content2">
       <div class="image2">
-        <img src="./assets/img/bg budidaya.jpg" alt="">
+        <img src="./assets/img/bg budidaya.webp" alt="">
       </div>
       <div class="text-box2">
         <p>Budidaya hayati di kawasan geopark memiliki potensi yang cukup besar untuk pertumbuhan perekonomian masyarakat. Area budidaya berada di luar kawasan konservasi BKSDA. Aneka keragaman hayati yang dikembangkan oleh masyarakat di sekitar kawasan dibedakan atas kelompok: tanaman pangan, hortikultura, perkebunan dan biofarmaka.  Tanaman hortikultura sudah cukup dikenal di kawasan Kecamatan Ciemas dan Ciracap berupa aneka buah-buahan dan sayuran. Area perkebunan yang sudah ada seperti perkebunan teh Bojongasih, perkebunan kelapa, kelapa sawit, cengkeh, dan karet yang terdapat di beberapa desa di Kecamatan Ciemas dan Ciracap. Tanaman biofarmaka berupa tanaman untuk bahan baku obat-obatan seperti serehwangi, kunyit, jahe, cengkeh dan lainnya.              
@@ -399,19 +399,19 @@
 <section>
     <div class="img-slider">
         <div class="slide active">
-          <img src="./assets/img/budidaya (1).jpg" alt="">
+          <img src="./assets/img/budidaya (1).webp" alt="">
           <div class="info">
             <h2>"Huma" Paddy Field</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="./assets/img/budidaya (2).jpg" alt="">
+          <img src="./assets/img/budidaya (2).webp" alt="">
           <div class="info">
             <h2>Perkebunan Buah Naga</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="./assets/img/budidaya (3).jpg" alt="">
+          <img src="./assets/img/budidaya (3).webp" alt="">
           <div class="info">
             <h2>CPUGGp</h2>
           </div>
